kubernetes/apps/workloads/it-tools/app/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: it-tools
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: it-tools
      app.kubernetes.io/instance: it-tools
      app.kubernetes.io/name: it-tools
  enableDefaultDeny:
    ingress: true
    egress: false
  ingress:
  - fromEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: network
          gateway.networking.k8s.io/gateway-name: gateway-internal
    toPorts:
      - ports:
        - port: "8080"
          protocol: TCP
